codex-rs/tui/src/snapshots/codex_tui__collab__tests__interaction_end_renders_sender_to_receiver_chat.snap
---
source: tui/src/collab.rs
expression: "cell.display_lines(80).iter().map(|line|\nline.spans.iter().map(|span|\nspan.content.clone()).collect::<String>()).collect::<Vec<_>>().join(\"\\n\")"
---
@main → @devops-engineer (running)
Please deploy and report back to @main.
