codex-rs/tui/src/snapshots/codex_tui__collab__tests__resume_begin_and_end_render_chat_like_message.snap
---
source: tui/src/collab.rs
expression: rendered
---
@main
Resuming @scout
---
@main
Resumed @scout (running)
