codex-rs/tui/src/snapshots/codex_tui__collab__tests__spawn_end_renders_debug_ids_when_enabled.snap
---
source: tui/src/collab.rs
expression: "cell.display_lines(120).iter().map(|line|\nline.spans.iter().map(|span|\nspan.content.clone()).collect::<String>()).collect::<Vec<_>>().join(\"\\n\")"
---
@main
Spawned @scout (running)
[debug] call_id=call-debug sender_thread_id=00000000-0000-0000-0000-000000000001 new_thread_id=00000000-0000-0000-0000-000000000002
