codex-rs/tui/src/snapshots/codex_tui__collab__tests__waiting_begin_renders_chat_like_message.snap
---
source: tui/src/collab.rs
expression: "cell.display_lines(80).iter().map(|line|\nline.spans.iter().map(|span|\nspan.content.clone()).collect::<String>()).collect::<Vec<_>>().join(\"\\n\")"
---
@main
Waiting for @scout, @validator
