codex-rs/tui/src/snapshots/codex_tui__collab__tests__waiting_end_renders_chat_like_agent_messages.snap
---
source: tui/src/collab.rs
expression: rendered.trim_end()
---
@orchestrator
Wait complete: 3 total · 1 running · 1 completed · 1 errored

---
@review-agent (completed)
I deployed the project, awaiting response from @review-agent.

---
@devops-engineer (errored)
Timeout while waiting for @devops-engineer
